Prevent wrap for short IDs in room list

--- a/src/app/components/shared/room-list/room-list.component.scss
+++ b/src/app/components/shared/room-list/room-list.component.scss
@@ -37,6 +37,7 @@
 
 .short-id {
   margin: 0 1em;
+  white-space: nowrap;
 }
 
 .delete {
